<resources>
    <string name="app_name">Weather</string>
    <string name="get_city_weather_button">Show weather</string>
    <string name="show_temperature_checkbox">Temperature</string>
    <string name="show_wind_checkbox">Wind speed</string>
    <string name="show_humidity_checkbox">Relative humidity</string>
    <string name="show_pressure_checkbox">Atmosphere pressure</string>
    <string name="city_hint">Input city</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind speed</string>
    <string name="humidity">Relative humidity</string>
    <string name="pressure">Atmosphere pressure</string>
    <string name="temperature_unit">C</string>
    <string name="wind_unit">m/s</string>
    <string name="humidity_unit">%</string>
    <string name="pressure_unit">bar</string>
    <string name="empty">Empty</string>
    <string name="about">About</string>
    <string name="about_title">About</string>
    <string name="about_content">Version: 1.0.0\nAuthor: Poletsky Maksim/nCreated: October 2019</string>
    <string name="current_weather_text">Current weather</string>
    <string name="add_to_history">Add to histry</string>
</resources>
