<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10pt"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/city_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_hint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thermo48" />

        <CheckBox
            android:id="@+id/show_temperature_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_temperature_checkbox" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wind48" />

        <CheckBox
            android:id="@+id/show_wind_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_wind_checkbox" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gigro48" />

        <CheckBox
            android:id="@+id/show_humidity_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_humidity_checkbox" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baro48" />

        <CheckBox
            android:id="@+id/show_pressure_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_pressure_checkbox" />

    </LinearLayout>

    <Button
        android:id="@+id/get_city_weather_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onGetWeatherButtonClick"
        android:text="@string/get_city_weather_button" />

</LinearLayout>