<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10pt"
    tools:context=".CityWeatherActivity">

    <TextView
        android:id="@+id/city_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/temperature_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thermo96" />

        <TextView
            android:id="@+id/temperatuere_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperatuere"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/wind_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wind96" />

        <TextView
            android:id="@+id/wind_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/humidity_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gigro96" />

        <TextView
            android:id="@+id/humidity_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pressure_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baro96" />

        <TextView
            android:id="@+id/pressure_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>